--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="back">back</string>
     <string name="send">send</string>
     <string name="chart">chart</string>
-    <string name="link">https://remoteservice.onrender.com/v2/</string>
+    <string name="link">https://remoteservice.onrender.com/v2/9</string>
 </resources>
